Add a new page name

--- a/Wireless/index.html
+++ b/Wireless/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset = "utf-8"/>
-        <title>¡Super Mokepon Tremendo!</title>
+        <title>¡Super Mokepon Ultra-Tremendo!</title>
         <link rel = "stylesheet" href="stySuperm.css" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
